--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -1,3 +1,5 @@
+$reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
+
 $dropterm = ^(alacritty-dropterm)$
 windowrule = float,$dropterm
 windowrule = workspace special silent,$dropterm
@@ -44,36 +46,19 @@ windowrule = workspace special silent,$countdown
 
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
-binde=,u,exec,pypr toggle term
-bind=,u,submap,reset
-binde=,w,exec,pypr toggle whats
-bind=,w,submap,reset
-binde=,g,exec,pypr toggle calc
-bind=,g,submap,reset
-binde=,n,exec,pypr toggle notes
-bind=,n,submap,reset
-binde=,h,exec,pypr toggle habit
-bind=,h,submap,reset
-binde=,i,exec,pypr toggle ia
-bind=,i,submap,reset
-binde=,p,exec,pypr toggle pulse
-bind=,p,submap,reset
-binde=,c,exec,pypr toggle clipse
-bind=,c,submap,reset
-binde=,l,exec,pypr toggle stretch
-bind=,l,submap,reset
-binde=,m,exec,pypr toggle btop
-bind=,m,submap,reset
-binde=,d,exec,pypr toggle countdown
-bind=,d,submap,reset
-binde=,e,exec,pypr toggle neorg
-bind=,e,submap,reset
-binde=,t,exec,pypr toggle task-tui
-bind=,t,submap,reset
-binde=,o,exec,pypr toggle tt
-bind=,o,submap,reset
-binde=,s,exec,pypr toggle canki
-bind=,s,submap,reset
-bind=,catchall,submap,reset
+binde=,u,exec,$reset pypr toggle term
+binde=,w,exec,$reset pypr toggle whats
+binde=,g,exec,$reset pypr toggle calc
+binde=,n,exec,$reset pypr toggle notes
+binde=,h,exec,$reset pypr toggle habit
+binde=,i,exec,$reset pypr toggle ia
+binde=,p,exec,$reset pypr toggle pulse
+binde=,c,exec,$reset pypr toggle clipse
+binde=,l,exec,$reset pypr toggle stretch
+binde=,m,exec,$reset pypr toggle btop
+binde=,d,exec,$reset pypr toggle countdown
+binde=,t,exec,$reset pypr toggle task-tui
+binde=,o,exec,$reset pypr toggle tt
+binde=,s,exec,$reset pypr toggle canki
 bind=,escape,submap,reset 
 submap=reset
