--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -36,6 +36,10 @@ $btop = ^(btop)$
 windowrule = float,$btop
 windowrule = workspace special silent,$btop
 
+$bluetui = ^(bluetui)$
+windowrule = float,$bluetui
+windowrule = workspace special silent,$bluetui
+
 $noi = ^(Noi)$
 windowrule = float,$noi
 windowrule = workspace special silent,$noi
@@ -56,6 +60,7 @@ binde=,p,exec,$reset pypr toggle pulse
 binde=,c,exec,$reset pypr toggle clipse
 binde=,l,exec,$reset pypr toggle stretch
 binde=,m,exec,$reset pypr toggle btop
+binde=,b,exec,$reset pypr toggle bluetui
 binde=,d,exec,$reset pypr toggle countdown
 binde=,t,exec,$reset pypr toggle task-tui
 binde=,o,exec,$reset pypr toggle tt
