--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -107,9 +107,13 @@ submap=reset
 bind=$mainMod,v,exec,sleep 2 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,v,submap,volume 
 submap=volume
-binde=,K,exec,swayosd-client --output-volume raise
-binde=,J,exec,swayosd-client --output-volume lower
-binde=,M,exec,swayosd-client --output-volume mute-toggle 
+#binde=,K,exec,swayosd-client --output-volume raise
+#binde=,J,exec,swayosd-client --output-volume lower
+#binde=,M,exec,swayosd-client --output-volume mute-toggle 
+binde=,K,exec,volumectl -u up
+binde=,J,exec,volumectl -u down
+binde=,M,exec,volumectl toggle-mute
 bind=,escape,submap,reset 
+
 submap=reset
 
