--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,6 +1,6 @@
 general {
-  gaps_in = 4
-  gaps_out = 11
+  gaps_in = 2
+  gaps_out = 20
   border_size = 0
 
   layout = master
@@ -16,9 +16,8 @@ decoration {
   inactive_opacity = 0.5
   drop_shadow = yes
 
-  col.shadow = rgba(1a1a1aee)
   blur {
-    enabled = on
+    enabled = yes
   }
 }
 
