--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -39,6 +39,7 @@ windowrulev2 = workspace 5 silent,title:^(Steam)$
 
 # class
 windowrulev2 = workspace 4,class:^(mpv)$
+windowrulev2 = workspace 4,class:^(org.telegram.desktop)$
 windowrulev2 = workspace 2 silent,class:^(firefox)$,
 windowrulev2 = workspace 2 silent,class:^(Brave-browser)$,
 windowrulev2 = workspace 2,class:^(floorp)$,
@@ -80,4 +81,3 @@ windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 windowrulev2 = group set always,class:(steam)
 windowrulev2 = group set always,class:(heroic)
 windowrulev2 = group set always,class:(lutris)
-windowrulev2 = group set always,class:(xbox-joy)
