--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,9 +1,8 @@
 {
   "layer": "top",
-    "position": "right",
-    "margin-right": 8,
-    "modules-left": ["hyprland/workspaces"],
-    "modules-right": ["hyprland/submap","custom/server-icon","custom/server", "custom/dsbattery-icon", "custom/dsbattery", "custom/pacman-icon", "custom/pacman", "custom/volume-icon", "custom/volume", "custom/disk-root", "disk", "custom/temp-icon", "temperature", "custom/cpu-icon", "cpu","custom/ram-icon", "memory","custom/separator", "clock", "clock#day", "clock#week-day"],
+    "position": "top",
+    "modules-left": [ "hyprland/workspaces", "clock","hyprland/submap" ],
+    "modules-right": [ "custom/easy", "custom/separator-pymor", "custom/pymor", "custom/separator-santos", "custom/santos", "custom/separator-climate", "custom/climate", "custom/separator-server", "custom/server", "custom/separator", "custom/updates", "custom/separator", "custom/ds4", "custom/separator", "pulseaudio", "custom/separator", "temperature", "custom/separator", "cpu", "custom/separator", "memory", "custom/separator", "disk" ],
     "hyprland/workspaces": {
       "all-outputs": false,
       "active-only": false,
@@ -16,160 +15,147 @@
         "5": " ",
         "6": "  ",
         "7": " ",
-        "urgent": "  ",
-        "default": "  ",
+        "urgent": " ",
+        "default": " ",
         "persistent": "persistent",
       },
       "persistent-workspaces": {
         "*": 7
+        },
+    },
+    "clock": {
+      "interval": 60,
+      "format": "                                                       {:%H:%M | %d | %a}",
+    },
+    "hyprland/submap": {
+      "format": "" ,
+      "tooltip": false
+    },
+    "custom/easy": {
+      "exec": "/home/cie/.config/waybar/scripts/easyeffects.sh",
+      "interval": 3,
+      "return-type": "json",
+      "tooltip": false
+    },
+    "custom/separator-pymor": {
+      "exec-if": "test -f /tmp/pomodoro_time",
+      "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
+      "interval": 1,
+      "format":" | "
+    },
+    "custom/pymor": {
+      "exec": "/home/cie/.config/waybar/scripts/pymor.sh",
+      "interval": 1,
+      "return-type": "json",
+      "tooltip": false
+    },
+    "custom/separator-santos": {
+      "exec-if": "test -f /tmp/santosmatch",
+      "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
+      "interval": 1,
+      "format":" | "
+    },
+    "custom/santos": {
+      "exec": "/home/cie/.config/waybar/scripts/santos_match.sh",
+      "interval": 5,
+      "return-type": "json",
+      "tooltip": false
+    },
+    "custom/separator-climate": {
+      "exec-if": "test -f /tmp/climate",
+      "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
+      "interval": 1,
+      "format":" | "
+    },
+    "custom/climate": {
+      "exec": "/home/cie/.config/waybar/scripts/climate.sh",
+      "interval": 10,
+      "return-type": "json",
+      "tooltip": false
+    },
+    "custom/separator-server": {
+      "exec-if": "/home/cie/.config/waybar/scripts/icon_retrieve.sh server",
+      "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
+      "interval": 1,
+      "format":" | "
+    },
+    "custom/server": {
+      "exec": "/home/cie/.config/waybar/scripts/server.sh",
+      "interval": 60,
+      "return-type": "json",
+      "tooltip": false
+    },
+    "custom/updates": {
+      "exec": "/home/cie/.config/waybar/scripts/update.sh",
+      "interval": 3600,
+      "return-type": "json",
+      "tooltip": false
+    },
+    "custom/ds4": {
+      "exec": "/home/cie/.config/waybar/scripts/ds4.sh",
+      "interval": 10,
+      "return-type": "json",
+      "tooltip": true
+    },
+    "pulseaudio": {
+      "format": "{icon} {volume}%",
+      "format-bluetooth": "{icon} {volume}%",
+      "format-muted": "",
+      "format-icons": {
+        "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
+        "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
+        "headphone": "",
+        "hands-free": "",
+        "headset": "",
+        "phone": "",
+        "phone-muted": "",
+        "portable": "",
+        "car": "",
+        "default": ["", ""]
+      },
+      "scroll-step": 1,
+      "states": {
+          "normal": 40,
+          "warning": 50,
+          "critical": 100
+        },
+      "on-click": "pavucontrol",
+      "ignored-sinks": ["Easy Effects Sink"]
+    },
+    
+    "custom/separator": {
+      "format":"|"
+    },
+    "cpu": {
+      "interval": 2,
+      "format": " {usage}%",
+      "states": {
+        "warning": 50,
+        "critical": 90
       }
-    },
-    "custom/pacman-icon": {
-      "tooltip": false,
-      "format": ""
-    },
-    "custom/pacman": {
-      "format": "{}",
-      "interval": 3600,                     // every hour
-      "exec": "checkupdates | wc -l",       // # of updates
-      "exec-if": "exit 0",                  // always run; consider advanced run conditions
-      "on-click": "alacritty --class update-system -e sh -c 'yay'; pkill -SIGRTMIN+8 waybar",
-      "signal": 8,
-      "tooltip": false,
-    },
-    "custom/volume-icon": {
-      "format": "{}",
-      "escape": true,
-      "interval": 1,
-      "exec": "cat /tmp/volume_status",
-      "on-click": "pavucontrol",
-      "tooltip": false,
-    },
-    "custom/volume": {
-      "format": "{}%",
-      "escape": true,
-      "interval": 1,
-      "exec": "pamixer --get-volume",
-      "on-click": "pavucontrol",
-      "tooltip": false,
-    },
-    "custom/temp-icon": {
-      "tooltip": false,
-      "format": "<span font=''></span>"
     },
     "temperature": {
       "thermal-zone": 2,
+      // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
       "critical-threshold": 80,
-      "format": "{temperatureC}°",
-      "tooltip": false,
-    },
-    "custom/server-icon": {
-      "format": "{}",
-      "escape": true,
-      "interval": 1,
-      "exec": "cat '/tmp/map_display-icon'",
-      "exec-if": "check_server_status.sh",
-      "tooltip": false,
-    },
-    "custom/server": {
-      "format": "{}",
-      "interval": 1,
-      "escape": true,
-      "exec": "cat '/tmp/map_display'",
-      "exec-if": "check_server_status.sh",
-      "tooltip": false,
-      "signal": 38,
-    },
-    "custom/dsbattery-icon": {
-      "format": "{}",
-      "escape": true,
-      "interval": 10,
-      "exec": "echo ''",
-      "exec-if": "is_ds4_on.sh",
-      "on-click-right": "dsbattery -d && killall xboxdrv",
-      "on-click": "nohup emulate_xbox_ps4.sh > /dev/null 2>&1 &",
-      "on-scroll-down": "emulate_xbox_ps4.sh 'kill xboxdrv'",
-      "tooltip": false,
-    },
-    "custom/dsbattery": {
-      "format": "{}%",
-      "interval": 10,
-      "escape": true,
-      "exec": "cat /tmp/ds4_battery",
-      "exec-if": "is_ds4_on.sh",
-      "on-click-right": "dsbattery -d && killall xboxdrv && rm /tmp/first_connect",
-      "on-click": "nohup emulate_xbox_ps4.sh > /dev/null 2>&1 &",
-      "on-scroll-down": "emulate_xbox_ps4.sh 'kill xboxdrv'",
-      "tooltip": false,
-      "signal": 38,
-    },
-    "hyprland/submap": {
-      "format": "",
-      "max-length": 8,
-      "tooltip": false
-    },
-    "tray": {
-      "icon-size": 18,
-      "spacing": 4
-    },
-    "clock#day": {
-      "format": "{:%d}",
-      "tooltip-format": "<tt><small>{calendar}</small></tt>",
-      "calendar": {
-        "mode"          : "month",
-        "mode-mon-col"  : 1,
-        "weeks-pos"     : "right",
-        "on-scroll"     : 1,
-        "format": {
-          "months":     "<span color='#ffead3'><b>{}</b></span>",
-          "days":       "<span color='#ecc6d9'><b>{}</b></span>",
-          "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
-          "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
-          "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
-        }
-      },
-    },
-    "clock": {
-      "format": "{:%H\n%M}",
-    },
-    "clock#week-day": {
-      "format": "{:%a}",
-    },
-    "custom/separator": {
-      "format": "-----",
-      "tooltip": false,
-    },
-    "custom/ram-icon": {
-      "tooltip": false,
-      "format": ""
+      // "format-critical": "{temperatureC}°C ",
+      "format": " {temperatureC}°"
     },
     "memory": {
-      "format": "{}%"
-    },
-    "custom/cpu-icon": {
-      "tooltip": false,
-      "format": "<span font='12'></span>"
-    },
-    "cpu": {
-      "format": "{usage}%",
-      "interval": 1,
-    },
-    "custom/disk-root": {
-      "tooltip": false,
-      "format": "<span font='12'></span>"
+      "interval": 30,
+      "format": " {}%",
+      "states": {
+        "warning": 50,
+        "critical": 80
+      }
     },
     "disk": {
       "interval": 30,
-      "format": "{percentage_free}%",
-      "path": "/"
-    },
-    "custom/disk-home": {
-      "tooltip": false,
-      "format": ""
-    },
-    "disk#home": {
-      "interval": 30,
-      "format": "{percentage_free}%",
-      "path": "/home"
+      "format": " {percentage_used}% ",
+      "path": "/",
+      "states": {
+          "warning": 80,
+          "critical": 90
+        }
     },
 }
