--- a/.config/systemd/user/easyeffects.service
+++ b/.config/systemd/user/easyeffects.service
@@ -5,7 +5,7 @@ StartLimitBurst=5
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/flatpak run com.github.wwmm.easyeffects --gapplication-service
+ExecStart=easyeffects --gapplication-service
 Restart=on-failure
 RestartSec=5s
 
