--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -9,6 +9,9 @@ bind = $mainMod, P, focuscurrentorlast
 bind = $mainMod, C, layoutmsg,swapwithmaster 
 bind = $mainMod, K,changegroupactive, b
 bind = $mainMod, J,changegroupactive, f
+bind = $mainMod ,i,resizeactive,0 -80
+bind = $mainMod ,d,resizeactive,0 80
+
 bind = $sS, F, layoutmsg,focusmaster
 bind=$mainMod,TAB,workspace,previous
 bind = $sS, V, exec, ankiv.sh
