--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -14,7 +14,7 @@ env = LIBVA_DRIVER_NAME,i965
 env = VDPAU_DRIVER,va_gl
 env = GTK_IM_MODULE,cedilla
 env = QT_IM_MODULE,cedilla
-env = GTK_THEME,Orchis-Dark
+env = GTK_THEME,Nordic
 env = XCURSOR_THEME,GoogleDot-White
 
 
