--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -16,7 +16,7 @@ $tt = ^(tt)$
 windowrule = float,$tt
 windowrule = workspace special silent,$tt
 
-$calc = ^(galculator)$
+$calc = ^(bc)$
 windowrule = float,$calc
 windowrule = workspace special silent,$calc
 
@@ -63,7 +63,7 @@ binde=,m,exec,$reset pypr toggle btop
 binde=,b,exec,$reset pypr toggle bluetui
 binde=,d,exec,$reset pypr toggle countdown
 binde=,t,exec,$reset pypr toggle task-tui
-binde=,o,exec,$reset pypr toggle tt
+#binde=,o,exec,$reset pypr toggle tt
 binde=,s,exec,$reset pypr toggle canki
 bind=,escape,submap,reset 
 submap=reset
