--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -1,7 +1,6 @@
 $reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
 $dpatch = hyprctl dispatch
 #actions
-bind=$mainMod,a,exec,sleep 5 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,a,submap,action
 submap=action
 bind=,k,exec, $reset $dpatch killactive
@@ -40,7 +39,6 @@ bind=,escape,submap,reset
 submap=reset
 
 #exec
-bind=$mainMod,e,exec,sleep 5 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,e,submap,exec
 submap=exec
 bind=,r,exec,$reset $runner
@@ -72,13 +70,12 @@ bind=$mainMod,L,submap,layout
 submap=layout
 bind=,j,exec,$reset $dpatch layoutmsg swapnext
 bind=,k,exec,$reset $dpatch layoutmsg swapprev
-bind=,f,exec,$reset $dpatch layoutmsg focusmaster
+bind=,m,exec,$reset $dpatch layoutmsg focusmaster
 bind=,s,exec,$reset $dpatch layoutmsg swapwithmaster
 bind=,t,exec,$reset $dpatch togglegroup
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,w,exec,sleep 3 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,w,submap,workspace
 submap=workspace
 bind=,c,exec,$reset $dpatch workspace 1
@@ -91,7 +88,6 @@ bind=,a,exec,$reset $dpatch workspace 7
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,m,exec,sleep 3 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,m,submap,movetoworkspace
 submap=movetoworkspace
 bind=,c,exec,$reset $dpatch movetoworkspace 1
@@ -104,16 +100,23 @@ bind=,a,exec,$reset $dpatch movetoworkspace 7
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,v,exec,sleep 2 && hyprctl dispatch submap reset #2 seconds timeout
+bind=$mainMod,p,submap,pymor
+submap=pymor
+bind=,s,exec,$reset pymor -t 20
+bind=,f,exec,$reset pymor -t 20 -f 3
+bind=,escape,submap,reset 
+submap=reset
+
 bind=$mainMod,v,submap,volume 
 submap=volume
-#binde=,K,exec,swayosd-client --output-volume raise
-#binde=,J,exec,swayosd-client --output-volume lower
-#binde=,M,exec,swayosd-client --output-volume mute-toggle 
-binde=,K,exec,volumectl -u up
-binde=,J,exec,volumectl -u down
-binde=,M,exec,volumectl toggle-mute
+binde=,K,exec,swayosd-client --output-volume raise
+binde=,J,exec,swayosd-client --output-volume lower
+binde=,M,exec,swayosd-client --output-volume mute-toggle 
+#binde=,K,exec,volumectl -u up
+#binde=,J,exec,volumectl -u down
+#binde=,M,exec,volumectl toggle-mute
 bind=,escape,submap,reset 
 
 submap=reset
+
 
