--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -60,6 +60,7 @@ windowrulev2 = workspace 7 silent,class:^(Waydroid)$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
+windowrule = opacity 1.0 override 1.0 override,^(zen-alpha)$
 windowrule = opacity 1.0 override 1.0 override,^(mbw_config_linux)$
 windowrule = opacity 1.0 override 1.0 override,^(Brave-browser)$
 windowrule = opacity 1.0 override 1.0 override,^(org.mozilla.firefox)$
