--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,10 +1,18 @@
 general {
-  gaps_in = 2
-  gaps_out = 20
-  border_size = 0
+  gaps_in = 0
+  gaps_out = 0
+  border_size = 1
+  col.active_border = rgb(F9E400)
+  col.inactive_border = rgb(2e3440)
 
   layout = master
   allow_tearing = true
+}
+
+group:groupbar {
+    text_color = rgb(F9E400)
+    col.active = rgb(2e3440)
+    font_size = 12
 }
 
 cursor {
@@ -12,17 +20,16 @@ cursor {
 }
 
 decoration {
-  rounding = 15
-  inactive_opacity = 0.5
-  drop_shadow = yes
-
+  rounding = 0
+  inactive_opacity = 1
+  drop_shadow = no
   blur {
-    enabled = yes
+    enabled = no
   }
 }
 
 animations {
-  enabled = yes
+  enabled = no
 
   bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -39,8 +46,9 @@ binds {
 }
 
 master {
-  no_gaps_when_only = false
-  orientation = top
+  no_gaps_when_only = true
+  orientation = bottom
+  new_status = master
 }
 
 misc {
@@ -48,4 +56,5 @@ misc {
   disable_splash_rendering = true
   key_press_enables_dpms=true
   disable_hyprland_logo = true
+  font_family = 'JetBrainMono Nerd Font'
 }
