--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -96,6 +96,9 @@ frame-opacity = 1.0;
 # Default: 0 (disabled)
 corner-radius = 0
 
+opacity-rule = [
+    "80:class_g = 'Dunst'"
+];
 #################################
 #            Blur               #
 #################################
@@ -150,7 +153,7 @@ blur-kern = "3x3box";
 # Specify the backend to use: `xrender`, `glx`, or `egl`.
 #
 # Default: "xrender"
-backend = "glx"
+#backend = "glx"
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but may cause performance
