--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,7 +2,33 @@
   "layer": "top",
     "position": "top",
     "modules-left": [ "hyprland/workspaces", "clock","hyprland/submap" ],
-    "modules-right": [ "custom/easy", "custom/separator-pymor", "custom/pymor", "custom/separator-santos", "custom/santos", "custom/separator", "custom/variant", "custom/separator-climate", "custom/climate", "custom/separator-server", "custom/server", "custom/separator", "custom/updates", "custom/separator", "custom/ds4", "custom/separator", "pulseaudio", "custom/separator", "temperature", "custom/separator", "cpu", "custom/separator", "memory", "custom/separator", "disk" ],
+    "modules-right": [ 
+      "custom/easy", 
+      "custom/separator-stretch", 
+      "custom/stretch", 
+      "custom/separator-pymor", 
+      "custom/pymor", 
+      "custom/separator-santos", 
+      "custom/santos", 
+      "custom/separator", 
+      "custom/variant", 
+      "custom/climate", 
+      "custom/separator-server", 
+      "custom/server", 
+      "custom/separator", 
+      "custom/updates", 
+//      "custom/ds4", 
+      "custom/separator", 
+      "pulseaudio", 
+      "custom/separator", 
+      "temperature", 
+      "custom/separator", 
+      "cpu", 
+      "custom/separator", 
+      "memory", 
+      "custom/separator", 
+      "disk" 
+      ],
     "hyprland/workspaces": {
       "all-outputs": false,
       "active-only": false,
@@ -37,6 +63,18 @@
       "return-type": "json",
       "tooltip": false
     },
+    "custom/separator-stretch": {
+      "exec-if": "test -f /tmp/stretch",
+      "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
+      "interval": 1,
+      "format":" | "
+    },
+    "custom/stretch": {
+      "exec": "/home/cie/.config/waybar/scripts/stretch.sh",
+      "interval": 1,
+      "return-type": "json",
+      "tooltip": false
+    },
     "custom/separator-pymor": {
       "exec-if": "test -f /tmp/pomodoro_time",
       "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
@@ -67,12 +105,6 @@
       "return-type": "json",
       "tooltip": false
     },
-    "custom/separator-climate": {
-      "exec-if": "test -f /tmp/climate",
-      "exec": "/home/cie/.config/waybar/scripts/icon_retrieve.sh",
-      "interval": 1800,
-      "format":" | "
-    },
     "custom/climate": {
       "exec": "/home/cie/.config/waybar/scripts/climate.sh",
       "interval": 1800,
@@ -97,12 +129,12 @@
       "return-type": "json",
       "tooltip": false
     },
-    "custom/ds4": {
-      "exec": "/home/cie/.config/waybar/scripts/ds4.sh",
-      "interval": 60,
-      "return-type": "json",
-      "tooltip": true
-    },
+    //"custom/ds4": {
+    //  "exec": "/home/cie/.config/waybar/scripts/ds4.sh",
+    //  "interval": 60,
+    //  "return-type": "json",
+    //  "tooltip": true
+    //},
     "pulseaudio": {
       "format": "{icon} {volume}%",
       "format-bluetooth": "{icon} {volume}%",
