--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -1,12 +1,13 @@
-# binds
 bind = $mainMod, T, exec, $terminal
 bind = $sS, C, killactive 
 bind = $mainMod, u, exec, 360.sh 252
 
-bind = $mainMod, J, layoutmsg,cyclenext
-bind = $mainMod, K, layoutmsg,cycleprev
-bind = $mainMod, P, focuscurrentorlast
-bind = $mainMod, C, layoutmsg,swapwithmaster 
+bind = $mainMod, j, layoutmsg,cyclenext
+bind = $mainMod, k, layoutmsg,cycleprev
+#bind = $mainMod, P, focuscurrentorlast
+bind = $sS, M, layoutmsg,swapwithmaster 
+bind = $mainMod, M, layoutmsg,focusmaster
+
 bind = $mainMod, K,changegroupactive, b
 bind = $mainMod, J,changegroupactive, f
 bind = $mainMod ,i,resizeactive,0 -80
@@ -15,7 +16,7 @@ bind = $mainMod ,d,resizeactive,0 80
 bind = $sS, F, layoutmsg,focusmaster
 bind=$mainMod,TAB,workspace,previous
 bind = $sS, V, exec, ankiv.sh
-bind = $sS, M, exec, maps.sh
+#bind = $sS, M, exec, maps.sh
 bind = $sS, R, exec, hyprctl keyword monitor VGA-1,preferred,auto,1,transform,3
 bind = $sS, S, exec, hyprctl keyword monitor VGA-1,preferred,auto,1,transform,0
 
@@ -27,4 +28,3 @@ bind = $mainMod, mouse_down, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e+1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
