--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,18 +1,29 @@
+source = ~/.config/hypr/configs/colors.conf
+
 general {
   gaps_in = 0
   gaps_out = 0
   border_size = 1
-  col.active_border = rgb(F9E400)
-  col.inactive_border = rgb(2e3440)
+  col.active_border = $border
+  col.inactive_border = $bg
 
   layout = master
   allow_tearing = true
 }
 
+group {
+  col.border_active = $bg
+  col.border_inactive = $bg
+}
+
 group:groupbar {
-    text_color = rgb(F9E400)
-    col.active = rgb(2e3440)
-    font_size = 12
+    text_color = $bg
+    col.locked_active = $bg
+    scrolling = false
+    col.inactive= $fg
+    col.active = $border
+    col.locked_inactive = $bg
+    font_size = 14
 }
 
 cursor {
@@ -22,7 +33,7 @@ cursor {
 decoration {
   rounding = 0
   inactive_opacity = 1
-  drop_shadow = no
+  drop_shadow = yes
   blur {
     enabled = no
   }
@@ -49,6 +60,7 @@ master {
   no_gaps_when_only = true
   orientation = bottom
   new_status = master
+  mfact = 0.70
 }
 
 misc {
