--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -44,6 +44,11 @@ $noi = ^(Noi)$
 windowrule = float,$noi
 windowrule = workspace special silent,$noi
 
+$vimiv = ^(vimiv)$
+windowrule = float,$vimiv
+windowrule = workspace special silent,$vimiv
+
+
 $countdown = ^(countdown)$
 windowrule = float,$countdown
 windowrule = workspace special silent,$countdown
@@ -61,7 +66,8 @@ binde=,c,exec,$reset pypr toggle clipse
 binde=,l,exec,$reset pypr toggle stretch
 binde=,m,exec,$reset pypr toggle btop
 binde=,b,exec,$reset pypr toggle bluetui
-binde=,d,exec,$reset pypr toggle countdown
+binde=,r,exec,$reset pypr toggle countdown
+binde=,v,exec,$reset pypr toggle vimiv
 binde=,t,exec,$reset pypr toggle task-tui
 #binde=,o,exec,$reset pypr toggle tt
 binde=,s,exec,$reset pypr toggle canki
