--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,10 +1,10 @@
-monitor = VGA-1,1360x768@60,0x0,1
-source = ~/.config/hypr/configs/exec.conf
+monitor=,preferred,auto,auto
 source = ~/.config/hypr/configs/env.conf
-source = ~/.config/hypr/configs/vars.conf
-source = ~/.config/hypr/configs/input.conf
+source = ~/.config/hypr/configs/exec.conf
+source = ~/.config/hypr/configs/variables.conf
 source = ~/.config/hypr/configs/general.conf
-source = ~/.config/hypr/configs/wrules.conf
-source = ~/.config/hypr/configs/submaps.conf
-source = ~/.config/hypr/configs/scratchpads.conf
+source = ~/.config/hypr/configs/input.conf
 source = ~/.config/hypr/configs/binds.conf
+source = ~/.config/hypr/configs/submap.conf
+source = ~/.config/hypr/configs/scratchpads.conf
+source = ~/.config/hypr/configs/rules.conf
