--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,9 +1,9 @@
 background {
-    monitor =
-    path = ~/Downloads/mylivewallpapers.com-Ciri-Rain-ezgif.com-gif-to-apng-converter.png
+  monitor =
+    path = ~/.wallpapers/ign-0011.png
     color = rgba(25, 20, 20, 1.0)
 
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+# all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 0 # 0 disables blurring
     blur_size = 7
     noise = 0.0117
@@ -13,8 +13,12 @@ background {
     vibrancy_darkness = 0.0
 }
 
+general {
+  hide_cursor = true
+}
+
 input-field {
-    monitor =
+  monitor =
     size = 200, 50
     outline_thickness = 3
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
