--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
-preload = ~/.wallpapers/forest_stairs.jpg
+preload = ~/.wallpapers/ign-0011.png
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = VGA-1,~/.wallpapers/forest_stairs.jpg
+wallpaper = VGA-1,~/.wallpapers/ign-0011.png
 
 #enable splash text rendering over the wallpaper
-splash = true
+splash = false
 
 #fully disable ipc
 # ipc = off
