--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -1,9 +1,10 @@
-# floating 
 windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
 windowrulev2 = float,class:^(update-system)$
+windowrulev2 = float,class:^(xdg-desktop-portal-lxqt)$
 
-windowrulev2 = size 60% 60%,class:^(firefox)$title:^(File Upload)$
+windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = size 60% 60%,class:^(xdg-desktop-portal-lxqt)$
 windowrulev2 = float,class:^(hiit)$
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
@@ -40,6 +41,9 @@ windowrulev2 = workspace 5 silent,title:^(Steam)$
 # class
 windowrulev2 = workspace 4,class:^(mpv)$
 windowrulev2 = workspace 4,class:^(org.telegram.desktop)$
+windowrulev2 = workspace 4,class:^(DL: language lessons)$
+windowrulev2 = workspace 4,class:^(org.pwmt.zathura)$
+windowrulev2 = workspace 4,class:^(anki)$
 windowrulev2 = workspace 2 silent,class:^(firefox)$,
 windowrulev2 = workspace 2 silent,class:^(Brave-browser)$,
 windowrulev2 = workspace 2,class:^(floorp)$,
@@ -79,6 +83,10 @@ windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
 windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 
 # tab layout rules
-windowrulev2 = group set always,class:(steam)
+#
+windowrulev2 = group set always,class:^(.*)$
 windowrulev2 = group set always,class:(heroic)
 windowrulev2 = group set always,class:(lutris)
+windowrulev2 = group set always,class:(org.telegram.desktop)
+windowrulev2 = group set always,class:(DL: language lessons)
+
