--- a/.config/hypr/configs/submap.conf
+++ b/.config/hypr/configs/submap.conf
@@ -6,7 +6,7 @@ submap=action
 bind=,k,exec, $reset $dpatch killactive
 bind=,b,exec,$reset killall -SIGUSR2 waybar
 bind=,w,submap,window
-bind=,l,submap,layout
+bind=,e,submap,effects
 bind=,escape,submap,reset 
 submap=reset
 
@@ -42,15 +42,18 @@ submap=reset
 bind=$mainMod,e,submap,exec
 submap=exec
 bind=,r,exec,$reset $runner
+bind=,e,exec,$reset emacsclient -c -a 'emacs'
+bind=,t,exec,$reset stretch.sh -t 15 -s 12 -w 3
+bind=,m,exec,$reset maps.sh
 bind=,v,exec,$reset mpvtube.sh
 bind=,b,exec,$reset $browser
 bind=,a,exec,$reset waydroid show-full-ui
 bind=,n,exec,$reset dunstctl close-all
 bind=,l,exec,$reset open_mm.sh
 bind=,o,exec,$reset wlogout
+bind=,h,exec, $reset cliphist list | rofi -config ~/.config/rofi/cliphist.rasi -dmenu | cliphist decode | wl-copy
 bind=,s,submap,studies
 bind=,p,submap,pomo
-bind=,e,submap,effects
 bind=,escape,submap,reset 
 submap=reset
 
@@ -88,7 +91,7 @@ bind=,a,exec,$reset $dpatch workspace 7
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,m,submap,movetoworkspace
+bind=$sS,w,submap,movetoworkspace
 submap=movetoworkspace
 bind=,c,exec,$reset $dpatch movetoworkspace 1
 bind=,b,exec,$reset $dpatch movetoworkspace 2
@@ -109,14 +112,9 @@ submap=reset
 
 bind=$mainMod,v,submap,volume 
 submap=volume
-binde=,K,exec,swayosd-client --output-volume raise
-binde=,J,exec,swayosd-client --output-volume lower
-binde=,M,exec,swayosd-client --output-volume mute-toggle 
-#binde=,K,exec,volumectl -u up
-#binde=,J,exec,volumectl -u down
-#binde=,M,exec,volumectl toggle-mute
+bind=,k,exec,$reset swayosd-client --output-volume raise
+bind=,j,exec,$reset swayosd-client --output-volume lower
+bind=,m,exec,$reset swayosd-client --output-volume mute-toggle 
 bind=,escape,submap,reset 
 
 submap=reset
-
-
