--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -78,7 +78,7 @@ fade-out-step = 0.03;
 #
 # Range: 0.1 - 1.0
 # Default: 1.0 (disabled)
-frame-opacity = 1.0;
+frame-opacity = 0.7;
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 #
@@ -96,9 +96,6 @@ frame-opacity = 1.0;
 # Default: 0 (disabled)
 corner-radius = 0
 
-opacity-rule = [
-    "80:class_g = 'Dunst'"
-];
 #################################
 #            Blur               #
 #################################
@@ -153,7 +150,7 @@ blur-kern = "3x3box";
 # Specify the backend to use: `xrender`, `glx`, or `egl`.
 #
 # Default: "xrender"
-#backend = "glx"
+backend = "glx"
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but may cause performance
@@ -192,10 +189,6 @@ detect-client-opacity = true;
 #
 # Default: false
 unredir-if-possible = true
-
-unredir-if-possible-exclude = [
-  "class_g = 'mpv'"
-]
 
 # Delay before unredirecting the window, in milliseconds.
 #
@@ -289,7 +282,33 @@ use-damage = true;
 # Rule-based per-window options.
 #
 # See WINDOW RULES section in the man page for how these work.
-rules: ({
+rules: (
+        { match = "class_i = 'rofi'"; animations = (
+            { triggers = [ "open" ];
+            preset = "fly-in";
+            direction = "up";
+            },
+
+            { triggers = [ "close" ];
+            preset = "fly-out";
+            direction = "down";
+            },
+            )
+        },
+
+        { match = "class_i = 'scratchpad'"; animations = (
+            { triggers = [ "open", "show" ];
+            preset = "fly-in";
+            direction = "left";
+            },
+
+            { triggers = [ "close", "hide" ];
+            preset = "fly-out";
+            direction = "down";
+            },
+            )
+        },
+{
   match = "window_type = 'tooltip'";
   fade = false;
   shadow = true;
@@ -297,24 +316,25 @@ rules: ({
   full-shadow = false;
 }, {
   match = "window_type = 'dock'    || "
-          "window_type = 'desktop' || "
-          "_GTK_FRAME_EXTENTS@";
+    "window_type = 'desktop' || "
+    "_GTK_FRAME_EXTENTS@";
   blur-background = false;
 }, {
   match = "window_type != 'dock'";
-  # shader = "my_shader.frag";
+# shader = "my_shader.frag";
 }, {
   match = "window_type = 'dock' || "
-          "window_type = 'desktop'";
+    "window_type = 'desktop'";
   corner-radius = 0;
 }, {
   match = "name = 'Notification'   || "
-          "class_g = 'Conky'       || "
-          "class_g ?= 'Notify-osd' || "
-          "class_g = 'Cairo-clock' || "
-          "_GTK_FRAME_EXTENTS@";
+    "class_g = 'Conky'       || "
+    "class_g ?= 'Notify-osd' || "
+    "class_g = 'Cairo-clock' || "
+    "_GTK_FRAME_EXTENTS@";
   shadow = false;
 })
+
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
