changed santos script

--- a/.config/systemd/user/santos_calender.service
+++ b/.config/systemd/user/santos_calender.service
@@ -3,4 +3,4 @@ Description=A script to display Santos fc matchs
 
 [Service]
 Type=simple
-ExecStart=/home/cie/.bin/santos_calender.sh
+ExecStart=/home/digo/.bin/santos_calendar.mjs
