--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ bind-key C-a send-prefix
 set -g base-index 1
 
 # Easy config reload
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 
 # vi is good
 setw -g mode-keys vi
@@ -49,7 +49,7 @@ bind-key = select-layout main-vertical
 set-window-option -g other-pane-height 25
 set-window-option -g other-pane-width 80
 set-window-option -g display-panes-time 1500
-set-window-option -g window-status-current-style fg=magenta
+set-window-option -g window-status-current-style fg=red
 
 bind-key a last-pane
 bind-key q display-panes
@@ -78,8 +78,9 @@ set-option -g status-style fg=white
 set -g status-left '#[fg=green]#H #[default]'
 set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
-set-option -g pane-active-border-style fg=yellow
-set-option -g pane-border-style fg=cyan
+set -g pane-active-border fg=red
+#set-option -g pane-active-border-style fg=red
+set-option -g pane-border-style fg=white
 
 # Set window notifications
 setw -g monitor-activity on
