--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,6 +7,7 @@ set -g base-index 1
 # Easy config reload
 bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 
+
 # vi is good
 setw -g mode-keys vi
 
@@ -26,8 +27,8 @@ bind-key -r -T prefix       M-j            resize-pane -D 5
 bind-key -r -T prefix       M-h            resize-pane -L 5
 bind-key -r -T prefix       M-l           resize-pane -R 5
 # use vim-like keys for splits and windows
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
@@ -88,3 +89,15 @@ set -g visual-activity on
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @plugin "arcticicestudio/nord-tmux"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
