--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -7,7 +7,6 @@ set -g base-index 1
 # Easy config reload
 bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 
-
 # vi is good
 setw -g mode-keys vi
 
@@ -69,8 +68,11 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namesp
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+# fix for st
+#set -g default-terminal "tmux-256color"
+#set -ga terminal-overrides ",*256col*:Tc"
+set -g default-terminal "alacritty" 
+set -g terminal-overrides ",alacritty:Tc"
 
 # Status Bar
 set-option -g status-interval 1
