added a new line

--- a/.config/ohmyposh/posh.toml
+++ b/.config/ohmyposh/posh.toml
@@ -5,6 +5,7 @@ console_title_template = '{{ .Shell }} in {{ .Folder }}'
 [[blocks]]
   type = 'prompt'
   alignment = 'left'
+  newline = true
 
   [[blocks.segments]]
     type = 'path'
