--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -7,6 +7,7 @@ size = 12.0
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
+
 style = "Bold"
 
 [font.bold_italic]
@@ -29,3 +30,6 @@ bindings = [
   { key = "N", mods = "Control|Shift", action = "CreateNewWindow" },
   { key = "C", mods = "ALT", action = "ToggleViMode" },
 ]
+
+[cursor]
+style = { blinking="Always" }
