--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -78,8 +78,8 @@ set -g terminal-overrides ",alacritty:Tc"
 set-option -g status-interval 1
 set-option -g status-style bg=black
 set-option -g status-style fg=white
-set -g status-left '#[fg=green]#H #[default]'
-set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+#set -g status-left '#[fg=green]#H #[default]'
+#set -g status-right '%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 set -g pane-active-border fg=red
 #set-option -g pane-active-border-style fg=red
