--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -7,7 +7,6 @@ size = 12.0
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
-
 style = "Bold"
 
 [font.bold_italic]
@@ -20,7 +19,7 @@ style = "Italic"
 
 [font.normal]
 family = "JetBrainsMono Nerd Font"
-style = "Regular"
+style = "Bold"
 
 [window]
 opacity = 1.0
