added a new animation for picom

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,43 +1,52 @@
 backend = "glx"
 rules = (
-	{ match = "QTILE_INTERNAL = 1"; corner-radius = 0; },
-  {
+		{ match = "QTILE_INTERNAL = 1"; corner-radius = 0; },
+		{
 		match = "class_g = 'Whatsapp-for-linux'";
 		animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-    corner-radius = 10;
-	 },
-	{
+		corner-radius = 10;
+		},
+		{
+		match = "class_g = 'cmus'";
+		animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
+		corner-radius = 10;
+		},
+		{
+		match = "class_g = 'cmus'";
+		animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
+		corner-radius = 10;
+		},
+		{
 		match = "class_g = 'Whatsapp-for-linux'";
 		animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-    corner-radius = 10;
-	},
-  {
-		match = "name = 'scratchpad'";
-		animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
-    corner-radius = 10;
-	 },
-	{
-		match = "name = 'scratchpad'";
-		animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
-    corner-radius = 10;
-	},
-  {
-		match = "class_g = 'right_side'";
-		animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "right" },);
-    corner-radius = 10;
-	 },
-   {
-		match = "class_g = 'right_side'";
-		animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "right" },);
-    corner-radius = 10;
-	 },
-{
-		match = "class_g = 'steam'";
-		shadow = false; 
-		blur-background = false; 
-		full-shadow = false;
-	 },
-),
+		corner-radius = 10;
+		},
+		{
+			match = "name = 'scratchpad'";
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "up" },);
+			corner-radius = 10;
+		},
+		{
+			match = "name = 'scratchpad'";
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "down" },);
+			corner-radius = 10;
+		},
+		{
+			match = "class_g = 'right_side'";
+			animations = ( { triggers = [ "hide","close" ]; preset = "fly-out"; direction = "right" },);
+			corner-radius = 10;
+		},
+		{
+			match = "class_g = 'right_side'";
+			animations = ( { triggers = [ "open","show" ]; preset = "fly-in"; direction = "right" },);
+			corner-radius = 10;
+		},
+		{
+			match = "class_g = 'steam'";
+			shadow = false; 
+			blur-background = false; 
+			full-shadow = false;
+		});
 vsync=false;
 fading = true;
 fade-delta = 10;
