--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,7 +57,8 @@ bind-key c new-window
 bind-key t next-window
 bind-key T previous-window
 
-bind-key [ copy-mode
+#bind-key [ copy-mode
+bind -n M-c copy-mode
 bind-key ] paste-buffer
 
 # Setup 'v' to begin selection as in Vim
